--- a/Principal.html
+++ b/Principal.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games Studios</title>
-   <link rel="stylesheet" href="/css/princ2.css">
+   <link rel="stylesheet" href="princ2.css">
    <script src="/js/menu.js"></script>
    <link rel="shortcut icon" href="/img/Green_Modern_Ninja_Logo-removebg-preview.png" type="image/x-icon">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
