--- a/Login.html
+++ b/Login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login|Games Studios</title>
     <link rel="shortcut icon" href="/img/Green_Modern_Ninja_Logo-removebg-preview.png" type="image/x-icon">
-      <link rel="stylesheet" href="/css/login.css">
+      <link rel="stylesheet" href="login.css">
 </head>
 <body>
     <form action="" class="login">
