--- a/Inicio.html
+++ b/Inicio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Games Studios</title>
-    <link rel="stylesheet" href="/css/inicio.css">
+    <link rel="stylesheet" href="inicio.css">
 <link rel="shortcut icon" href="/img/Green_Modern_Ninja_Logo-removebg-preview.png" type="image/x-icon">
 </head>
 <body>
